[package]
name = "ariadne"
version = "0.1.0"
authors = ["Redblueflame <contact@redblueflame.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "3"
actix-rt = "1.1.1"
config = { version = "0.11", features = ["toml"] }
serde = "1.0"
chrono = "0.4"
log = "0.4"
parse_duration = "2.1"
async-trait = "0.1"
thiserror = "1.0"
chrono-tz = "0.5"
futures-util = "0.3"
uuid = { version = "0.8", features = ["v4"] }
env_logger = "0.8"
serde_json = "1"
lockfree = "0.5"
nom = "6.1"
[dependencies.clickhouse-rs]
path = "../clickhouse-rs"
default-features = false
features = ["async_std"]