[package]
name = "ariadne"
version = "0.1.0"
authors = ["Redblueflame <contact@redblueflame.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"

[[bin]]
name = "ariadne"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "3"
actix-rt = "1.1.1"
config = { version = "0.11", features = ["toml"] }
serde = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
async-trait = "0.1"
actix-cors = "0.5"
reqwest = {version = "0.11", features = ["stream"]}
thiserror = "1.0"
chrono-tz = "0.5"
futures-util = "0.3"
duration-str = "0.2"
uuid = { version = "0.8", features = ["v4"] }
env_logger = "0.8"
serde_json = "1"
anyhow = "1.0"
lockfree = "0.5"
nom = "6.1"
tempdir = "0.3"
maxminddb = { version = "0.17" }
[dependencies.clickhouse-rs]
git = "https://github.com/suharev7/clickhouse-rs"
branch = "async-await"
default-features = false
features = ["async_std"]